--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     
-hi team 
+    <h1>hi team</h1> 
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
