--- a/index.html
+++ b/index.html
@@ -13,8 +13,49 @@
 </head>
 
 <body>
-    
-
+    <div class="container">
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <a class="navbar-brand" href="#">
+                <img src="img/logo.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">ГЛАВНАЯ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">ПРОЕКТЫ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">СЕРТИФИКАТЫ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">КОНТАКТЫ</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="">
+                    <div class="title">
+                        <div class="fw-300">PROJECT</div>
+                        <div class="fw-700">NURTOWN</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="owl-carousel owl-theme">
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
