added second page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav fs-12 fw-400 line-height-12">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ГЛАВНАЯ</a>
+                            <a class="nav-link" href="second.html">ГЛАВНАЯ</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">ПРОЕКТЫ</a>
