added nav and footer

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                             <a class="nav-link" href="#">ПРОЕКТЫ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">СЕРТИФИКАТЫ</a>
+                            <a class="nav-link" href="ser.html">СЕРТИФИКАТЫ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">КОНТАКТЫ</a>
+                            <a class="nav-link" href="contact.html">КОНТАКТЫ</a>
                         </li>
                     </ul>
                 </div>
