--- a/ser.html
+++ b/ser.html
@@ -13,7 +13,34 @@
 </head>
 
 <body>
-
+    <div class="section-1">
+        <div class="container">
+            <nav class="navbar navbar-expand-md navbar-light">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav fs-12 fw-400 line-height-12">
+                        <li class="nav-item">
+                            <a class="nav-link" href="second.html">ГЛАВНАЯ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ПРОЕКТЫ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ser.html">СЕРТИФИКАТЫ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">КОНТАКТЫ</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
 
 
 
@@ -56,24 +83,63 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <footer class="pt-5 pb-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <img src="img/Group 11 1.png" alt="">
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <ul class="navbar-nav fs-12 fw-400 line-height-12">
+                        <li class="fs-18 bold mb-3 text-white">Информация</li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ГЛАВНАЯ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ПРОЕКТЫ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">СЕРТИФИКАТЫ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">КОНТАКТЫ</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <ul class="navbar-nav fs-12 fw-400 line-height-12">
+                        <li class="fs-18 bold mb-4 text-white">Контакты</li>
+                        <li class="nav-item  d-flex mb-5">
+                                <img src="img/Vector111.png" alt="" width="11px" height="16px">
+                                <div class="ml-2">100000, Республика Казахстан, <br> г.Караганда,ул. Телевизиюонная 10</div>
+                        </li>
+                        <li class="nav-item  d-flex mb-4">
+                                <img src="img/Vector112.png" alt="" width="16px" height="16px">
+                                <div class="ml-2">+7 (701) 77 76 811</div>
+                        </li>
+                        <li class="nav-item  d-flex">
+                                <img src="img/Vector113.png" alt="" width="16px" height="11px">
+                                <div class="ml-2">Galym.sultanov@mail.ru</div>
+                        </li>
+                        
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <ul class="navbar-nav fs-12 fw-400 line-height-12">
+                        <li class="fs-18 bold mb-4 text-white">Социальные сети</li>
+                        <li class="d-flex">
+                            <img src="img/Shape111.png" alt="" class="mr-4">
+                            <img src="img/Shape 112.png" alt="" class="mr-4">
+                            <img src="img/Linked In.png" alt="" class="mr-4">
+                            <img src="img/pininterest.png" alt="" class="mr-4">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr class="bg-white opacity-01 mt-5">
+        <div class="center text-white opacity-03">&copy; 2019 Digital Project. Все права защищены.</div>
+    </footer>
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
