added to nav and footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                             <a class="nav-link" href="second.html">ГЛАВНАЯ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ПРОЕКТЫ</a>
+                            <a class="nav-link" href="galareya.html">ГАЛЕРЕЯ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nashi.html">ПРОЕКТЫ</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="ser.html">СЕРТИФИКАТЫ</a>
