--- a/second.html
+++ b/second.html
@@ -27,7 +27,10 @@
                             <a class="nav-link" href="#">ГЛАВНАЯ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ПРОЕКТЫ</a>
+                            <a class="nav-link" href="galareya.html">ГАЛЕРЕЯ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nashi.html">ПРОЕКТЫ</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="ser.html">СЕРТИФИКАТЫ</a>
