--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-7">
-                    <div id="demo" class="carousel slide" data-ride="carousel">
+                <div class="col-md-7 ">
+                    <div id="demo" class="carousel slide ml-5" data-ride="carousel">
 
                         <!-- The slideshow -->
                         <div class="carousel-inner">
@@ -79,11 +79,9 @@
                             </div>
                         </div>
                         <!-- Left and right controls -->
-                        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                            <span class="carousel-control-prev-icon"></span>
-                        </a>
+                        
                         <a class="carousel-control-next" href="#demo" data-slide="next">
-                            <span class="text-black fs-12 fw-400 line-height-12">
+                            <span class="text-black fs-14 fw-400 line-height-12">
                                 Взглянуть
                                 <img src="img/ong.svg" alt="">
                             </span>
