--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
                             </div>
                         </div>
                         <!-- Left and right controls -->
-                        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                            <span class="carousel-control-prev-icon"></span>
-                        </a>
+                        
                         <a class="carousel-control-next" href="#demo" data-slide="next">
                             <span class="text-black fs-12 fw-400 line-height-12">
                                 Взглянуть
@@ -259,11 +257,12 @@
 
     <footer class="pt-5 pb-2">
         <div class="container">
+
             <div class="row">
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 d-flex justify-content-center">
                     <img src="img/Group 11 1.png" alt="">
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 d-flex justify-content-center">
                     <ul class="navbar-nav fs-12 fw-400 line-height-12">
                         <li class="fs-18 bold mb-3 text-white">Информация</li>
                         <li class="nav-item">
@@ -280,7 +279,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 d-flex justify-content-center">
                     <ul class="navbar-nav fs-12 fw-400 line-height-12">
                         <li class="fs-18 bold mb-4 text-white">Контакты</li>
                         <li class="nav-item  d-flex mb-5">
@@ -298,7 +297,7 @@
                         
                     </ul>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 d-flex justify-content-center">
                     <ul class="navbar-nav fs-12 fw-400 line-height-12">
                         <li class="fs-18 bold mb-4 text-white">Социальные сети</li>
                         <li class="d-flex">
